# ESP34-P4-PC-SamCoupe

./: .gitignore  CMakeLists.txt  README.md  build_olimex_p4pc.sh  sdkconfig.defaults
ESP32/: Audio.cpp  Audio.h  IDEDisk.cpp  IDEDisk.h  Input.cpp  Input.h  MIDI.cpp  MIDI.h  OSD.cpp  OSD.h  UI.cpp  UI.h  Video.cpp
components/esp_lcd_lt8912b/: CMakeLists.txt  esp_lcd_lt8912b.c  esp_lcd_lt8912b_eotp.c
components/esp_lcd_lt8912b/include/: esp_lcd_lt8912b.h
components/sim_audio/: CMakeLists.txt  Kconfig  sim_audio.c
components/sim_audio/include/: sim_audio.h
components/sim_display/: CMakeLists.txt  Kconfig  idf_component.yml  sim_display.c
components/sim_display/include/: sim_display.h
components/sim_kbd/: CMakeLists.txt  Kconfig  sim_kbd.c
components/sim_kbd/include/: sim_kbd.h
components/sim_sdcard/: CMakeLists.txt  Kconfig  sim_sdcard.c
components/sim_sdcard/include/: sim_sdcard.h
components/simcoupe_core/: CMakeLists.txt
components/simcoupe_core/Base/: Breakpoint.cpp  CPU.cpp  CPU.h  Debug.cpp  Frame.cpp  Frame.h  Memory.cpp  Memory.h  Options.cpp  Options.h  SAMIO.cpp  SID.h  SimCoupe.h  Sound.cpp  Sound.h  Symbol.cpp  Tape.cpp  Util.cpp  Z80Ops_SAM.cpp
components/simcoupe_core/SAASound/src/: defns.h
components/simcoupe_core/include/: SID.h  config.h  fstream  sstream
components/simcoupe_core/include/fmt/: chrono.h
components/simcoupe_core/include/sys/: lstat_stub.h  statvfs.h
docs/: ARCHITECTURE.md
main/: CMakeLists.txt  fatfs_alloc.c  main.cpp  simcoupe.lf
